@@ -929,34 +929,6 @@ WML_HANDLER_FUNCTION(unit,, cfg)
 
 }
 
-WML_HANDLER_FUNCTION(volume,, cfg)
-{
-
-	int vol;
-	float rel;
-	std::string music = cfg["music"];
-	std::string sound = cfg["sound"];
-
-	if(!music.empty()) {
-		vol = preferences::music_volume();
-		rel = atof(music.c_str());
-		if (rel >= 0.0f && rel < 100.0f) {
-			vol = static_cast<int>(rel*vol/100.0f);
-		}
-		sound::set_music_volume(vol);
-	}
-
-	if(!sound.empty()) {
-		vol = preferences::sound_volume();
-		rel = atof(sound.c_str());
-		if (rel >= 0.0f && rel < 100.0f) {
-			vol = static_cast<int>(rel*vol/100.0f);
-		}
-		sound::set_sound_volume(vol);
-	}
-
-}
-
 WML_HANDLER_FUNCTION(on_undo, event_info, cfg)
 {
 	if(cfg["delayed_variable_substitution"].to_bool(false)) {
